# nirhiss

./: README  README.md  index.html  juliet_fitting_wasp96.ipynb  pyproject.toml  setup.cfg  setup.py  wasp39_reduction.ipynb  wasp96_reduction.ipynb
nirhiss/: __init__.py  background.py  background_utils.py  f277_background.py  juliet_utils.py  nestor_transit_fitting.py  niriss_class.py  plotting.py  simultaneous_order_fitting.py  utils.py
niriss/: __init__.py  background.py  niriss.py  niriss_extraction.py  plotting.py  tracing_niriss.py  transit_fitting.py  utils.py
src/: clipping.py  extraction.py  plotting.py  setup.cfg  utils.py
src/nirhiss/: background_utils.py  extraction.py  lc_gif.py  masking.py  niriss_class.py  plotting.py  tracing.py  ts_gif.py  utils.py
src/nirhiss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
