[build-system]
requires = ["setuptools>=42", "wheel", "cython", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/nirhiss/version.py"

[project]
name = "nirhiss"
version = "0.0.1rc1"
description = "JWST NIRISS reduction routine"
readme = "README.md"
url = "https://github.com/afeinstein20/nirhiss"
authors = [{ name = "nirHiss", email = "afeinstein@uchicago.edu" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://adina.feinste.in/nirhiss"
