[metadata]
name = nirhiss
author = Adina Feinstein
author_email = adina.d.feinstein@gmail.com
description = A data reduction tool for JWST NIRISS instrument
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/afeinstein20/nirhiss
project_urls =
    Bug Tracker = https://github.com/afeinstein20/nirhiss/issues
    Source Code = https://github.com/afeinstein20/nirhiss
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent


[options]
package_dir =
    =src
packages = find:
zip_safe = True
python_requires= >=3.8
setup_requires =
    cython
install_requires =
    h5py
    tqdm
    numpy
    scipy
    eureka
    juliet
    corner
    ccdproc
    astropy
    skimage
    photutils
    matplotlib

[options.packages.find]
where = src
